# chitthi

./: Cargo.toml
src/: chitthi.rs  main.rs
src/components/: add_cred.rs  folders.rs  mod.rs  quit.rs
src/mail/: mailbox.rs  mod.rs
src/windows/: home.rs  mod.rs  screens.rs  welcome.rs
