[package]
name = "chitthi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.28.1"
dirs = "5.0.1"
imap = "2.4.1"
native-tls = "0.2.12"
ratatui = "0.29.0"
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"
tui-textarea = "0.7.0"
